fixed that space after work pic

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ color: white;
   background-size:cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: fit-content;
+  height: 100vh;
 }
 .job{
   display: block;
