working on personal projects

--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,7 @@ a:visited{
   text-align: center;
   /*font-family: */
 }
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+
 .title{
 padding-top: 15%;
 color: #DCFAF3;
@@ -34,14 +30,21 @@ margin: 0 auto;
 }
 
 .job{
-  display: block;
-  background-color: rgb(244, 244, 244, .7);
-  margin: 1%;
-  padding: 1%;
-  width:70%;
-  margin-left: 15%;
+  text-align: left;
+  border-bottom-style: solid;
+  border-width: thin;
+  border-bottom-color:#DCFAF3;
+  width: 60%;
+  margin-left: 20%;
+  padding-bottom: 2%;
 }
-
+.jobList{
+  line-height: 2em;
+}
+h3{
+  font-size: 10pt;
+  margin: 0 auto;
+}
 .school{
   text-align: left;
   width: 40%;
@@ -62,7 +65,7 @@ margin: 0 auto;
   padding-top: 3%;
 }
 .block{
-  height: 100vh;
+  min-height: 100vh;
   /* scroll-snap-align: start; */
   text-align: center;
 
@@ -71,35 +74,19 @@ margin: 0 auto;
 padding-top: 10%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 #particles canvas{
   position: absolute;
   width: 100%;
   height: 100vh;
 }
 
-.location-tag{
-position: fixed;
-bottom: 0;
-text-align: left;
-color: white;
-}
+
 .landing-page{
  height: 100vh;
  text-align: center;
 }
-.App-link {
-  color: #61dafb;
-}
+
 img{
   width:50px;
 }
@@ -149,4 +136,27 @@ span{
  margin-top: 15%;
  /* margin-left: 3%; */
   height:60%;
+}
+.project{
+  width:70%;
+  margin:5%;
+}
+.projectDescription{
+  position:absolute;
+  background-color: #382C5A;
+  width:40%;
+  margin-top:10%;
+  padding:2%;
+  text-align: left;
+  z-index: 10;
+}
+.projectList{
+  text-align: left;
+  line-height: 2em;
+}
+.projectPic{
+  width: 50%;
+  position: absolute;
+  margin-top: 4%;
+  margin-right: 30%;
 }
