--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,10 @@ span{
   margin-top: 4%;
   margin-right: 30%;
 }
+.touch{
+  text-align:center;
+  width:40%;
+  padding-top: 20%;
+  margin-left: 30%;
+  font-size: 20pt;
+}
