--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   background-color: #0E0035;
   color: #DCFAF3;
   scroll-snap-type: mandatory;
-
+  font-family: Roboto, sans-serif;
 }
 h1{
   margin-left: 5%;
