--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 .App {
 
   background-color: #0E0035;
   color: #DCFAF3;
   scroll-snap-type: y mandatory;
-  font-family: Roboto, sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 h1{
   margin-left: 5%;
@@ -27,6 +29,7 @@ color:#8eead1;
 padding-top: 15%;
 color: #DCFAF3;
 margin: 0 auto;
+width: 50%;
 }
 
 .job{
