--- a/src/App.css
+++ b/src/App.css
@@ -163,6 +163,8 @@ span{
   display: inline-block;
   width:25%;
   margin:5%;
+  margin-bottom: 2%;
+  margin-top: 1%;
   height:270px;
   padding: 1%;
   min-width: 200px;
@@ -174,4 +176,10 @@ span{
 }
 img{
   margin: 1%;
+}
+a{
+  color: white
+}
+a:visited{
+  color: white
 }
