--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   background-color: #0E0035;
   color: #DCFAF3;
   font-family: 'Quicksand', sans-serif;
+  scroll-snap-type: y mandatory;
 }
 h1{
   margin-left: 5%;
@@ -64,6 +65,7 @@ h3{
   top:0;
   min-height: 100vh;
   text-align: center;
+  scroll-snap-align: start;
 
 }
 #qual{
