--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ h3{
   min-height: 100vh;
   text-align: center;
   scroll-snap-align: start;
+  margin: 5%;
 
 }
 #qual{
@@ -116,14 +117,17 @@ span{
   border-style: solid;
   border-color: none;
   border-radius: 100%;
-  min-width: 27vh;
+  min-width: 45vh;
   display: inline-block;
   top:0;
+  margin-top: 5%;
   vertical-align: top;
 }
 .aboutPage{
-  margin-top: 10%;
   height:50%;
+  justify-content: left;
+  text-align: left;
+  margin-left: 3%;
 }
 .project{
   width:70%;
@@ -148,10 +152,10 @@ span{
   width:20%;
 }
 .projectPic{
-  width: 50%;
+  width: 43%;
   position: absolute;
   margin-top: 4%;
-  margin-right: 30%;
+  margin-right: 40%;
 }
 .touch{
   text-align:center;
