--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,6 @@ span{
   margin-top:10%;
   
   text-align: left;
-  position:absolute;
 
 }
 .projectBlurb{
@@ -188,7 +187,7 @@ span{
   margin:5%;
   margin-bottom: 2%;
   margin-top: 1%;
-  height:270px;
+  min-height:270px;
   padding: 1%;
   min-width: 200px;
   top:0;
